@@ -462,6 +462,25 @@ name|h
 operator|.
 name|validateUpdate
 argument_list|(
+name|adoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"9"
+argument_list|,
+literal|"lowerfilt"
+argument_list|,
+literal|"pixmaa"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|h
+operator|.
+name|validateUpdate
+argument_list|(
 name|commit
 argument_list|()
 argument_list|)
@@ -2024,6 +2043,203 @@ expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|"document brown"
+argument_list|,
+name|collation
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCollate2
+specifier|public
+name|void
+name|testCollate2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrCore
+name|core
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+decl_stmt|;
+name|SearchComponent
+name|speller
+init|=
+name|core
+operator|.
+name|getSearchComponent
+argument_list|(
+literal|"spellcheck"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"speller is null and it shouldn't be"
+argument_list|,
+name|speller
+operator|!=
+literal|null
+argument_list|)
+expr_stmt|;
+name|ModifiableSolrParams
+name|params
+init|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+decl_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CommonParams
+operator|.
+name|QT
+argument_list|,
+literal|"spellCheckCompRH"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_BUILD
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|CommonParams
+operator|.
+name|Q
+argument_list|,
+literal|"pixma-a-b-c-d-e-f-g"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|COMPONENT_NAME
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|add
+argument_list|(
+name|SpellCheckComponent
+operator|.
+name|SPELLCHECK_COLLATE
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+name|SolrRequestHandler
+name|handler
+init|=
+name|core
+operator|.
+name|getRequestHandler
+argument_list|(
+literal|"spellCheckCompRH"
+argument_list|)
+decl_stmt|;
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|rsp
+operator|.
+name|add
+argument_list|(
+literal|"responseHeader"
+argument_list|,
+operator|new
+name|SimpleOrderedMap
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|handler
+operator|.
+name|handleRequest
+argument_list|(
+operator|new
+name|LocalSolrQueryRequest
+argument_list|(
+name|core
+argument_list|,
+name|params
+argument_list|)
+argument_list|,
+name|rsp
+argument_list|)
+expr_stmt|;
+name|NamedList
+name|values
+init|=
+name|rsp
+operator|.
+name|getValues
+argument_list|()
+decl_stmt|;
+name|NamedList
+name|spellCheck
+init|=
+operator|(
+name|NamedList
+operator|)
+name|values
+operator|.
+name|get
+argument_list|(
+literal|"spellcheck"
+argument_list|)
+decl_stmt|;
+name|NamedList
+name|suggestions
+init|=
+operator|(
+name|NamedList
+operator|)
+name|spellCheck
+operator|.
+name|get
+argument_list|(
+literal|"suggestions"
+argument_list|)
+decl_stmt|;
+name|String
+name|collation
+init|=
+operator|(
+name|String
+operator|)
+name|suggestions
+operator|.
+name|get
+argument_list|(
+literal|"collation"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"pixmaa"
 argument_list|,
 name|collation
 argument_list|)
